Hw3/code/y.output
   0  $accept : program $end

   1  program : def_or_dec_multiple

   2  def_or_dec_multiple : def_or_dec_multiple definition_or_declaration
   3                      | definition_or_declaration

   4  definition_or_declaration : definition_option
   5                            | declaration_option

   6  definition_option : function_definition

   7  declaration_option : scalar_declaration
   8                     | array_declaration
   9                     | function_declaration

  10  scalar_declaration : type idents SEMI_COLON

  11  type : first_opt

  12  first_opt : CONST second_opt
  13            | second_opt
  14            | CONST

  15  second_opt : SIGNED third_opt
  16             | UNSIGNED third_opt
  17             | TYPE_FLOAT third_opt
  18             | TYPE_DOUBLE third_opt
  19             | VOID third_opt
  20             | SIGNED
  21             | UNSIGNED
  22             | TYPE_FLOAT
  23             | TYPE_DOUBLE
  24             | VOID
  25             | third_opt

  26  third_opt : LONG_LONG
  27            | LONG
  28            | SHORT
  29            | LONG_LONG TYPE_INT
  30            | LONG TYPE_INT
  31            | SHORT TYPE_INT
  32            | TYPE_CHAR
  33            | TYPE_INT

  34  idents : idents COMMA ident_single
  35         | ident_single

  36  ident_single : IDENT
  37               | IDENT ASSIGN expr
  38               | STAR_SYMBOL IDENT
  39               | STAR_SYMBOL IDENT ASSIGN expr

  40  array_declaration : type array_multiple SEMI_COLON

  41  array_multiple : array_multiple COMMA array_single
  42                 | array_single

  43  array_single : IDENT L_SQUARE expr R_SQUARE
  44               | IDENT array_dimensions ASSIGN L_BRACKET array_content R_BRACKET

  45  array_dimensions : L_SQUARE expr R_SQUARE array_dimensions
  46                   | L_SQUARE expr R_SQUARE

  47  array_content : L_BRACKET array_content R_BRACKET
  48                | array_content COMMA L_BRACKET array_content R_BRACKET
  49                | array_content COMMA expr
  50                | expr

  51  function_declaration : type IDENT L_PAREN function_parameters R_PAREN SEMI_COLON
  52                       | type STAR_SYMBOL IDENT L_PAREN function_parameters R_PAREN SEMI_COLON

  53  $$1 :

  54  function_definition : type IDENT L_PAREN function_parameters R_PAREN $$1 statement_compound

  55  $$2 :

  56  function_definition : type STAR_SYMBOL IDENT L_PAREN function_parameters R_PAREN $$2 statement_compound

  57  function_parameters : function_parameters COMMA type ident_single
  58                      | type ident_single
  59                      |

  60  function_call_argus : function_call_argus COMMA expr
  61                      | expr

  62  expr : expr_assign
  63       |

  64  expr_assign : IDENT ASSIGN expr_assign
  65              | STAR_SYMBOL expr_second ASSIGN expr_assign
  66              | expr_array_assign
  67              | expr_logicOR

  68  $$3 :

  69  expr_array_assign : IDENT array_dimensions $$3 ASSIGN expr_logicOR

  70  expr_logicOR : expr_logicOR LOGIC_OR expr_logicAND
  71               | expr_logicAND

  72  expr_logicAND : expr_logicAND LOGIC_AND expr_bitwiseOR
  73                | expr_bitwiseOR

  74  expr_bitwiseOR : expr_bitwiseOR BITWISE_OR expr_bitwiseXOR
  75                 | expr_bitwiseXOR

  76  expr_bitwiseXOR : expr_bitwiseXOR BITWISE_XOR expr_bitwiseAND
  77                  | expr_bitwiseAND

  78  expr_bitwiseAND : expr_bitwiseAND AND_SYMBOL expr_isequal
  79                  | expr_isequal

  80  expr_isequal : expr_isequal EQUAL expr_compare
  81               | expr_isequal NOT_EQUAL expr_compare
  82               | expr_compare

  83  expr_compare : expr_compare LESS expr_shift
  84               | expr_compare LESS_EQUAL expr_shift
  85               | expr_compare GREATER expr_shift
  86               | expr_compare GREATER_EQUAL expr_shift
  87               | expr_shift

  88  expr_shift : expr_shift SHIFT_LEFT expr_add_sub
  89             | expr_shift SHIFT_RIGHT expr_add_sub
  90             | expr_add_sub

  91  expr_add_sub : expr_add_sub PLUS_SYMBOL expr_mul_div_mod
  92               | expr_add_sub MINUS_SYMBOL expr_mul_div_mod
  93               | expr_mul_div_mod

  94  expr_mul_div_mod : expr_mul_div_mod STAR_SYMBOL expr_second
  95                   | expr_mul_div_mod DIV expr_second
  96                   | expr_mul_div_mod MOD expr_second
  97                   | expr_second

  98  expr_second : AND_SYMBOL IDENT
  99              | STAR_SYMBOL expr_second
 100              | L_PAREN type R_PAREN expr_second
 101              | L_PAREN type STAR_SYMBOL R_PAREN expr_second
 102              | LOGIC_NOT expr_second
 103              | BITWISE_NOT expr_second
 104              | PLUS_SYMBOL expr_second
 105              | MINUS_SYMBOL expr_second
 106              | INCREMENT expr_second
 107              | DECREMENT expr_second
 108              | expr_first

 109  expr_first : IDENT array_dimensions
 110             | expr_first L_PAREN function_call_argus R_PAREN
 111             | L_PAREN expr R_PAREN
 112             | expr_first INCREMENT
 113             | expr_first DECREMENT
 114             | IDENT
 115             | literal

 116  literal : INT
 117          | FLOAT
 118          | CHAR
 119          | STRING
 120          | NULL_VAL

 121  statement_compound : L_BRACKET dec_or_state_multiple R_BRACKET
 122                     | L_BRACKET R_BRACKET

 123  dec_or_state_multiple : dec_or_state_multiple declaration_or_statement
 124                        | declaration_or_statement

 125  declaration_or_statement : declaration_option
 126                           | statement_option

 127  statement_option : statement_expr
 128                   | statement_if
 129                   | statement_switch
 130                   | statement_while
 131                   | statement_for
 132                   | statement_break
 133                   | statement_return
 134                   | statement_continue
 135                   | statement_compound
 136                   | statement_digitalWrite
 137                   | statement_delay

 138  statement_expr : expr SEMI_COLON

 139  $$4 :

 140  $$5 :

 141  statement_if : IF $$4 L_PAREN expr R_PAREN $$5 statement_if_last

 142  statement_if_last : statement_compound

 143  $$6 :

 144  $$7 :

 145  statement_if_last : statement_compound $$6 ELSE $$7 statement_compound

 146  statement_switch : SWITCH L_PAREN expr R_PAREN L_BRACKET statement_clause_multiple R_BRACKET
 147                   | SWITCH L_PAREN expr R_PAREN L_BRACKET R_BRACKET

 148  statement_clause_multiple : statement_clause_multiple statement_clause
 149                            | statement_clause

 150  statement_clause : statement_case
 151                   | statement_default

 152  statement_case : CASE expr COLON statement_multiple
 153                 | CASE expr COLON

 154  statement_default : DEFAULT COLON statement_multiple
 155                    | DEFAULT COLON

 156  statement_multiple : statement_multiple statement_option
 157                     | statement_option

 158  $$8 :

 159  statement_while : WHILE $$8 L_PAREN expr R_PAREN statement_option

 160  $$9 :

 161  $$10 :

 162  $$11 :

 163  statement_while : DO $$9 statement_option WHILE $$10 L_PAREN expr $$11 R_PAREN SEMI_COLON

 164  $$12 :

 165  $$13 :

 166  statement_for : FOR $$12 L_PAREN expr SEMI_COLON $$13 expr SEMI_COLON IDENT ASSIGN IDENT PLUS_SYMBOL INT R_PAREN statement_option

 167  statement_return : RETURN expr SEMI_COLON

 168  statement_break : BREAK SEMI_COLON

 169  statement_continue : CONTINUE SEMI_COLON

 170  statement_digitalWrite : DIGITALWRITE L_PAREN INT COMMA VALUE R_PAREN SEMI_COLON

 171  statement_delay : DELAY L_PAREN expr R_PAREN SEMI_COLON

state 0
	$accept : . program $end  (0)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	CONST  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	.  error

	program  goto 12
	def_or_dec_multiple  goto 13
	definition_or_declaration  goto 14
	definition_option  goto 15
	declaration_option  goto 16
	type  goto 17
	first_opt  goto 18
	second_opt  goto 19
	third_opt  goto 20
	scalar_declaration  goto 21
	array_declaration  goto 22
	function_declaration  goto 23
	function_definition  goto 24


state 1
	third_opt : TYPE_INT .  (33)

	.  reduce 33


state 2
	third_opt : TYPE_CHAR .  (32)

	.  reduce 32


state 3
	second_opt : TYPE_FLOAT . third_opt  (17)
	second_opt : TYPE_FLOAT .  (22)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 22
	R_PAREN  reduce 22
	STAR_SYMBOL  reduce 22

	third_opt  goto 25


state 4
	second_opt : TYPE_DOUBLE . third_opt  (18)
	second_opt : TYPE_DOUBLE .  (23)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 23
	R_PAREN  reduce 23
	STAR_SYMBOL  reduce 23

	third_opt  goto 26


state 5
	first_opt : CONST . second_opt  (12)
	first_opt : CONST .  (14)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	IDENT  reduce 14
	R_PAREN  reduce 14
	STAR_SYMBOL  reduce 14

	second_opt  goto 27
	third_opt  goto 20


state 6
	second_opt : SIGNED . third_opt  (15)
	second_opt : SIGNED .  (20)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 20
	R_PAREN  reduce 20
	STAR_SYMBOL  reduce 20

	third_opt  goto 28


state 7
	second_opt : UNSIGNED . third_opt  (16)
	second_opt : UNSIGNED .  (21)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 21
	R_PAREN  reduce 21
	STAR_SYMBOL  reduce 21

	third_opt  goto 29


state 8
	third_opt : LONG_LONG .  (26)
	third_opt : LONG_LONG . TYPE_INT  (29)

	TYPE_INT  shift 30
	IDENT  reduce 26
	R_PAREN  reduce 26
	STAR_SYMBOL  reduce 26


state 9
	third_opt : LONG .  (27)
	third_opt : LONG . TYPE_INT  (30)

	TYPE_INT  shift 31
	IDENT  reduce 27
	R_PAREN  reduce 27
	STAR_SYMBOL  reduce 27


state 10
	third_opt : SHORT .  (28)
	third_opt : SHORT . TYPE_INT  (31)

	TYPE_INT  shift 32
	IDENT  reduce 28
	R_PAREN  reduce 28
	STAR_SYMBOL  reduce 28


state 11
	second_opt : VOID . third_opt  (19)
	second_opt : VOID .  (24)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 24
	R_PAREN  reduce 24
	STAR_SYMBOL  reduce 24

	third_opt  goto 33


state 12
	$accept : program . $end  (0)

	$end  accept


state 13
	program : def_or_dec_multiple .  (1)
	def_or_dec_multiple : def_or_dec_multiple . definition_or_declaration  (2)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	CONST  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	$end  reduce 1

	definition_or_declaration  goto 34
	definition_option  goto 15
	declaration_option  goto 16
	type  goto 17
	first_opt  goto 18
	second_opt  goto 19
	third_opt  goto 20
	scalar_declaration  goto 21
	array_declaration  goto 22
	function_declaration  goto 23
	function_definition  goto 24


state 14
	def_or_dec_multiple : definition_or_declaration .  (3)

	.  reduce 3


state 15
	definition_or_declaration : definition_option .  (4)

	.  reduce 4


state 16
	definition_or_declaration : declaration_option .  (5)

	.  reduce 5


state 17
	scalar_declaration : type . idents SEMI_COLON  (10)
	array_declaration : type . array_multiple SEMI_COLON  (40)
	function_declaration : type . IDENT L_PAREN function_parameters R_PAREN SEMI_COLON  (51)
	function_declaration : type . STAR_SYMBOL IDENT L_PAREN function_parameters R_PAREN SEMI_COLON  (52)
	function_definition : type . IDENT L_PAREN function_parameters R_PAREN $$1 statement_compound  (54)
	function_definition : type . STAR_SYMBOL IDENT L_PAREN function_parameters R_PAREN $$2 statement_compound  (56)

	IDENT  shift 35
	STAR_SYMBOL  shift 36
	.  error

	idents  goto 37
	ident_single  goto 38
	array_multiple  goto 39
	array_single  goto 40


state 18
	type : first_opt .  (11)

	.  reduce 11


state 19
	first_opt : second_opt .  (13)

	.  reduce 13


state 20
	second_opt : third_opt .  (25)

	.  reduce 25


state 21
	declaration_option : scalar_declaration .  (7)

	.  reduce 7


state 22
	declaration_option : array_declaration .  (8)

	.  reduce 8


state 23
	declaration_option : function_declaration .  (9)

	.  reduce 9


state 24
	definition_option : function_definition .  (6)

	.  reduce 6


state 25
	second_opt : TYPE_FLOAT third_opt .  (17)

	.  reduce 17


state 26
	second_opt : TYPE_DOUBLE third_opt .  (18)

	.  reduce 18


state 27
	first_opt : CONST second_opt .  (12)

	.  reduce 12


state 28
	second_opt : SIGNED third_opt .  (15)

	.  reduce 15


state 29
	second_opt : UNSIGNED third_opt .  (16)

	.  reduce 16


state 30
	third_opt : LONG_LONG TYPE_INT .  (29)

	.  reduce 29


state 31
	third_opt : LONG TYPE_INT .  (30)

	.  reduce 30


state 32
	third_opt : SHORT TYPE_INT .  (31)

	.  reduce 31


state 33
	second_opt : VOID third_opt .  (19)

	.  reduce 19


state 34
	def_or_dec_multiple : def_or_dec_multiple definition_or_declaration .  (2)

	.  reduce 2


state 35
	ident_single : IDENT .  (36)
	ident_single : IDENT . ASSIGN expr  (37)
	array_single : IDENT . L_SQUARE expr R_SQUARE  (43)
	array_single : IDENT . array_dimensions ASSIGN L_BRACKET array_content R_BRACKET  (44)
	function_declaration : type IDENT . L_PAREN function_parameters R_PAREN SEMI_COLON  (51)
	function_definition : type IDENT . L_PAREN function_parameters R_PAREN $$1 statement_compound  (54)

	ASSIGN  shift 41
	L_SQUARE  shift 42
	L_PAREN  shift 43
	COMMA  reduce 36
	SEMI_COLON  reduce 36

	array_dimensions  goto 44


state 36
	ident_single : STAR_SYMBOL . IDENT  (38)
	ident_single : STAR_SYMBOL . IDENT ASSIGN expr  (39)
	function_declaration : type STAR_SYMBOL . IDENT L_PAREN function_parameters R_PAREN SEMI_COLON  (52)
	function_definition : type STAR_SYMBOL . IDENT L_PAREN function_parameters R_PAREN $$2 statement_compound  (56)

	IDENT  shift 45
	.  error


state 37
	scalar_declaration : type idents . SEMI_COLON  (10)
	idents : idents . COMMA ident_single  (34)

	COMMA  shift 46
	SEMI_COLON  shift 47
	.  error


state 38
	idents : ident_single .  (35)

	.  reduce 35


state 39
	array_declaration : type array_multiple . SEMI_COLON  (40)
	array_multiple : array_multiple . COMMA array_single  (41)

	COMMA  shift 48
	SEMI_COLON  shift 49
	.  error


state 40
	array_multiple : array_single .  (42)

	.  reduce 42


state 41
	ident_single : IDENT ASSIGN . expr  (37)
	expr : .  (63)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	R_PAREN  reduce 63
	COMMA  reduce 63
	SEMI_COLON  reduce 63

	literal  goto 65
	expr  goto 66
	expr_assign  goto 67
	expr_array_assign  goto 68
	expr_logicOR  goto 69
	expr_logicAND  goto 70
	expr_bitwiseOR  goto 71
	expr_bitwiseXOR  goto 72
	expr_bitwiseAND  goto 73
	expr_isequal  goto 74
	expr_compare  goto 75
	expr_shift  goto 76
	expr_add_sub  goto 77
	expr_mul_div_mod  goto 78
	expr_second  goto 79
	expr_first  goto 80


state 42
	array_single : IDENT L_SQUARE . expr R_SQUARE  (43)
	array_dimensions : L_SQUARE . expr R_SQUARE array_dimensions  (45)
	array_dimensions : L_SQUARE . expr R_SQUARE  (46)
	expr : .  (63)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	R_SQUARE  reduce 63

	literal  goto 65
	expr  goto 81
	expr_assign  goto 67
	expr_array_assign  goto 68
	expr_logicOR  goto 69
	expr_logicAND  goto 70
	expr_bitwiseOR  goto 71
	expr_bitwiseXOR  goto 72
	expr_bitwiseAND  goto 73
	expr_isequal  goto 74
	expr_compare  goto 75
	expr_shift  goto 76
	expr_add_sub  goto 77
	expr_mul_div_mod  goto 78
	expr_second  goto 79
	expr_first  goto 80


state 43
	function_declaration : type IDENT L_PAREN . function_parameters R_PAREN SEMI_COLON  (51)
	function_definition : type IDENT L_PAREN . function_parameters R_PAREN $$1 statement_compound  (54)
	function_parameters : .  (59)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	CONST  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	R_PAREN  reduce 59
	COMMA  reduce 59

	type  goto 82
	first_opt  goto 18
	second_opt  goto 19
	third_opt  goto 20
	function_parameters  goto 83


state 44
	array_single : IDENT array_dimensions . ASSIGN L_BRACKET array_content R_BRACKET  (44)

	ASSIGN  shift 84
	.  error


state 45
	ident_single : STAR_SYMBOL IDENT .  (38)
	ident_single : STAR_SYMBOL IDENT . ASSIGN expr  (39)
	function_declaration : type STAR_SYMBOL IDENT . L_PAREN function_parameters R_PAREN SEMI_COLON  (52)
	function_definition : type STAR_SYMBOL IDENT . L_PAREN function_parameters R_PAREN $$2 statement_compound  (56)

	ASSIGN  shift 85
	L_PAREN  shift 86
	COMMA  reduce 38
	SEMI_COLON  reduce 38


state 46
	idents : idents COMMA . ident_single  (34)

	IDENT  shift 87
	STAR_SYMBOL  shift 88
	.  error

	ident_single  goto 89


state 47
	scalar_declaration : type idents SEMI_COLON .  (10)

	.  reduce 10


state 48
	array_multiple : array_multiple COMMA . array_single  (41)

	IDENT  shift 90
	.  error

	array_single  goto 91


state 49
	array_declaration : type array_multiple SEMI_COLON .  (40)

	.  reduce 40


state 50
	expr_assign : IDENT . ASSIGN expr_assign  (64)
	expr_array_assign : IDENT . array_dimensions $$3 ASSIGN expr_logicOR  (69)
	expr_first : IDENT . array_dimensions  (109)
	expr_first : IDENT .  (114)

	ASSIGN  shift 92
	L_SQUARE  shift 93
	LOGIC_OR  reduce 114
	LOGIC_AND  reduce 114
	BITWISE_OR  reduce 114
	BITWISE_XOR  reduce 114
	EQUAL  reduce 114
	NOT_EQUAL  reduce 114
	LESS  reduce 114
	LESS_EQUAL  reduce 114
	GREATER  reduce 114
	GREATER_EQUAL  reduce 114
	SHIFT_LEFT  reduce 114
	SHIFT_RIGHT  reduce 114
	DIV  reduce 114
	MOD  reduce 114
	R_SQUARE  reduce 114
	L_PAREN  reduce 114
	R_PAREN  reduce 114
	AND_SYMBOL  reduce 114
	STAR_SYMBOL  reduce 114
	PLUS_SYMBOL  reduce 114
	MINUS_SYMBOL  reduce 114
	INCREMENT  reduce 114
	DECREMENT  reduce 114
	COMMA  reduce 114
	COLON  reduce 114
	SEMI_COLON  reduce 114
	R_BRACKET  reduce 114

	array_dimensions  goto 94


state 51
	literal : STRING .  (119)

	.  reduce 119


state 52
	literal : CHAR .  (118)

	.  reduce 118


state 53
	literal : NULL_VAL .  (120)

	.  reduce 120


state 54
	literal : INT .  (116)

	.  reduce 116


state 55
	literal : FLOAT .  (117)

	.  reduce 117


state 56
	expr_second : LOGIC_NOT . expr_second  (102)

	IDENT  shift 95
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 96
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 97
	expr_first  goto 80


state 57
	expr_second : BITWISE_NOT . expr_second  (103)

	IDENT  shift 95
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 96
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 98
	expr_first  goto 80


state 58
	expr_second : L_PAREN . type R_PAREN expr_second  (100)
	expr_second : L_PAREN . type STAR_SYMBOL R_PAREN expr_second  (101)
	expr_first : L_PAREN . expr R_PAREN  (111)
	expr : .  (63)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	CONST  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	R_PAREN  reduce 63

	type  goto 99
	literal  goto 65
	first_opt  goto 18
	second_opt  goto 19
	third_opt  goto 20
	expr  goto 100
	expr_assign  goto 67
	expr_array_assign  goto 68
	expr_logicOR  goto 69
	expr_logicAND  goto 70
	expr_bitwiseOR  goto 71
	expr_bitwiseXOR  goto 72
	expr_bitwiseAND  goto 73
	expr_isequal  goto 74
	expr_compare  goto 75
	expr_shift  goto 76
	expr_add_sub  goto 77
	expr_mul_div_mod  goto 78
	expr_second  goto 79
	expr_first  goto 80


state 59
	expr_second : AND_SYMBOL . IDENT  (98)

	IDENT  shift 101
	.  error


state 60
	expr_assign : STAR_SYMBOL . expr_second ASSIGN expr_assign  (65)
	expr_second : STAR_SYMBOL . expr_second  (99)

	IDENT  shift 95
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 96
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 102
	expr_first  goto 80


state 61
	expr_second : PLUS_SYMBOL . expr_second  (104)

	IDENT  shift 95
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 96
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 103
	expr_first  goto 80


state 62
	expr_second : MINUS_SYMBOL . expr_second  (105)

	IDENT  shift 95
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 96
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 104
	expr_first  goto 80


state 63
	expr_second : INCREMENT . expr_second  (106)

	IDENT  shift 95
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 96
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 105
	expr_first  goto 80


state 64
	expr_second : DECREMENT . expr_second  (107)

	IDENT  shift 95
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 96
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 106
	expr_first  goto 80


state 65
	expr_first : literal .  (115)

	.  reduce 115


state 66
	ident_single : IDENT ASSIGN expr .  (37)

	.  reduce 37


state 67
	expr : expr_assign .  (62)

	.  reduce 62


state 68
	expr_assign : expr_array_assign .  (66)

	.  reduce 66


state 69
	expr_assign : expr_logicOR .  (67)
	expr_logicOR : expr_logicOR . LOGIC_OR expr_logicAND  (70)

	LOGIC_OR  shift 107
	R_SQUARE  reduce 67
	R_PAREN  reduce 67
	COMMA  reduce 67
	COLON  reduce 67
	SEMI_COLON  reduce 67
	R_BRACKET  reduce 67


state 70
	expr_logicOR : expr_logicAND .  (71)
	expr_logicAND : expr_logicAND . LOGIC_AND expr_bitwiseOR  (72)

	LOGIC_AND  shift 108
	LOGIC_OR  reduce 71
	R_SQUARE  reduce 71
	R_PAREN  reduce 71
	COMMA  reduce 71
	COLON  reduce 71
	SEMI_COLON  reduce 71
	R_BRACKET  reduce 71


state 71
	expr_logicAND : expr_bitwiseOR .  (73)
	expr_bitwiseOR : expr_bitwiseOR . BITWISE_OR expr_bitwiseXOR  (74)

	BITWISE_OR  shift 109
	LOGIC_OR  reduce 73
	LOGIC_AND  reduce 73
	R_SQUARE  reduce 73
	R_PAREN  reduce 73
	COMMA  reduce 73
	COLON  reduce 73
	SEMI_COLON  reduce 73
	R_BRACKET  reduce 73


state 72
	expr_bitwiseOR : expr_bitwiseXOR .  (75)
	expr_bitwiseXOR : expr_bitwiseXOR . BITWISE_XOR expr_bitwiseAND  (76)

	BITWISE_XOR  shift 110
	LOGIC_OR  reduce 75
	LOGIC_AND  reduce 75
	BITWISE_OR  reduce 75
	R_SQUARE  reduce 75
	R_PAREN  reduce 75
	COMMA  reduce 75
	COLON  reduce 75
	SEMI_COLON  reduce 75
	R_BRACKET  reduce 75


state 73
	expr_bitwiseXOR : expr_bitwiseAND .  (77)
	expr_bitwiseAND : expr_bitwiseAND . AND_SYMBOL expr_isequal  (78)

	AND_SYMBOL  shift 111
	LOGIC_OR  reduce 77
	LOGIC_AND  reduce 77
	BITWISE_OR  reduce 77
	BITWISE_XOR  reduce 77
	R_SQUARE  reduce 77
	R_PAREN  reduce 77
	COMMA  reduce 77
	COLON  reduce 77
	SEMI_COLON  reduce 77
	R_BRACKET  reduce 77


state 74
	expr_bitwiseAND : expr_isequal .  (79)
	expr_isequal : expr_isequal . EQUAL expr_compare  (80)
	expr_isequal : expr_isequal . NOT_EQUAL expr_compare  (81)
